# baller

./: .gitignore  CMakeLists.txt  LIESMICH.txt  README.txt  configure
cmake/: DistClean.cmake  FindSDL_gfx.cmake  config-cmake.h
doc/: CMakeLists.txt  authors.txt  ballerburg.1  ballerburg.6
doc/de/: anleitung.html  anleitung.txt
doc/en/: manual.html
po/: CMakeLists.txt  de.po  fi.po  it.po  nl.po
src/: CMakeLists.txt  baller.h  baller1.c  baller1.h  baller2.c  baller2.h  ballergui.c  ballergui.h  cannoneer.c  dlgAlert.c  font8x16.h  i18n.h  market.c  music.c  music.h  paths.c  paths.h  psg.c  psg.h  screen.c  screen.h  sdlgfx.c  sdlgfx.h  sdlgui.c  sdlgui.h  settings.c  settings.h
